<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_purchases"
            android:icon="@drawable/ic_description"
            android:title="@string/procurement_list" />
        <item
            android:id="@+id/nav_cart"
            android:icon="@drawable/ic_shopping"
            android:title="@string/shopping_cart" />
        <item
            android:id="@+id/nav_wish"
            android:icon="@drawable/ic_fav"
            android:title="@string/wish_list" />
    </group>

    <item android:title="@string/user_setting">
        <menu>
            <item
                android:id="@+id/nav_setting"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/settings" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_exit"
                android:title="@string/logout" />
        </menu>
    </item>

</menu>
