<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.hawi.medmarket.BillActivity"
    android:background="@color/colorWhite"
    android:focusable="true"
    android:focusableInTouchMode="true">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_above="@+id/billLlSh">
        <ScrollView
            android:id="@+id/scrollTable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableLayout
                android:id="@+id/t1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingBottom="5dp"
                    android:paddingTop="5dp"
                    android:background="@drawable/gray_dark_gray_border_bottom">
                    <TextView
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:textColor="@color/colorWhite"
                        android:layout_marginStart="2dp"
                        android:gravity="start"
                        android:text="@string/description" />

                    <TextView
                        android:layout_width="40dp"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:textColor="@color/colorWhite"
                        android:layout_marginStart="2dp"
                        android:gravity="center"
                        android:text="@string/qty" />
                    <TextView
                        android:layout_width="40dp"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:textColor="@color/colorWhite"
                        android:layout_marginStart="2dp"
                        android:gravity="center"
                        android:text="@string/unit" />
                    <TextView
                        android:layout_width="50dp"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:gravity="center"
                        android:textColor="@color/colorWhite"
                        android:layout_marginStart="2dp"
                        android:text="@string/price" />
                    <TextView
                        android:layout_width="80dp"
                        android:gravity="center"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:textColor="@color/colorWhite"
                        android:layout_marginStart="2dp"
                        android:text="@string/total" />
                </TableRow>

            </TableLayout>
        </ScrollView>



    </LinearLayout>

    <RelativeLayout
        android:id="@+id/billLlSh"
        android:layout_above="@id/txtGoTo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:background="@color/colorRed"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/billShipCity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@id/billShipPrice"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/sp16"
            android:textStyle="bold"
            android:text="@string/shipping_price_inside_jeddah"/>
        <TextView
            android:id="@+id/billShipPrice"
            android:layout_toStartOf="@id/billspace"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/sp16"
            android:textStyle="bold"
            android:text="25"/>
        <TextView
            android:id="@+id/billspace"
            android:layout_toStartOf="@id/billSsr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=" "/>
        <TextView
            android:id="@+id/billSsr"
            android:layout_alignParentEnd="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/sp16"
            android:textStyle="bold"
            android:text="@string/SR"/>
    </RelativeLayout>

    <TextView
        android:id="@+id/txtGoTo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/llBottom"
        android:layout_marginTop="5dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:background="@color/colorInvDark"
        android:textColor="@color/colorWhite"
        android:onClick="onClickChangeCity"
        android:layout_centerHorizontal="true"
        android:text="@string/click_here_if_you_want_change_city"/>

    <LinearLayout
        android:id="@+id/llBottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/payFav"
        android:paddingBottom="2dp"
        android:paddingTop="2dp"
        android:orientation="vertical"
        android:background="@drawable/white_grey_border_top">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="end">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:gravity="end"
                android:text="@string/tot_amt"
                android:textColor="#ff0000"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/BillTotAmt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:text="120,000,000"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="2dp"
                android:text="@string/SR"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>

    <!-- Bottom -->
    <RelativeLayout
        android:id="@+id/payFav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:layout_marginBottom="3dp"
        android:gravity="center"
        android:layout_alignParentBottom="true">
        <Button
            android:id="@+id/bill_btnBuy"
            android:layout_alignParentStart="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorHealthGreen1"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp"
            android:textColor="@color/colorWhite"
            android:textSize="16sp"
            android:paddingEnd="5dp"
            android:paddingStart="5dp"
            android:onClick="btnClick"
            android:text="@string/confirm_bill"/>

    </RelativeLayout>

</RelativeLayout>
